--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://ayushidangayach.github.io./covid-tracker",
   "name": "covid-tracker",
   "version": "0.1.0",
   "private": true,
